Eighth pass + ADR-029/030, with the stale-clone correction applied
Eighth pass (2026-08-18, previously uncommitted): ADR-027 .eco import, ADR-028 one-climb-per-write height, ADR-026 amendment. ADR-029 (renumbered from misnumbered 023): B+ tree registry + genome slot; ScoreCard 8-structure change makes the next release 0.3.0. ADR-030 (renumbered from misnumbered 025): native workbook.xlsx/report.pptx via poi-ooxml 5.5.1. Correction: stale re-implementations voided; eighth-pass TreeContext/TreePersistenceAdapter/FilePersistenceAdapter/ecology-lab.html restored; BPlusTreeEngine NPE parity (finding 14) and ExperimentLab J4/finding-28/S6-16 fixes restored. Void list in docs/CHANGELOG-2026-08-19-adr029-030.md. 1100 tests green, javadoc clean.